:sparkles: add docker-compose with mysql

--- a/.env
+++ b/.env
@@ -1,12 +1,7 @@
-LOG_LEVEL=debug
-LOG_CHANNEL=daily
-
-DB_CONNECTION=mysql
-DB_HOST=mysql
-DB_PORT=3306
-DB_DATABASE=erp_gogol_ithub
+DB_DATABASE=pet_project
 DB_USERNAME=root
 DB_PASSWORD=root
 DB_ROOT_PASSWORD=root
+DB_PORT=3306
 
 DOCKER_MYSQL_PORT=3306
